fix link issue on firefox

--- a/less/popup.less
+++ b/less/popup.less
@@ -28,7 +28,7 @@ body{
 		padding: 6px 10px;
 		border: 0;
 		background-color:#3c90df;
-		color: #ffffff;
+		color: #ffffff!important;
 		cursor: pointer;
 		outline: 0;
 		text-align: center;
